kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-svc
  namespace: online-shopping
  
spec:
  selector:
    app: online-shop
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 80
